# curso-online-python-bd-2021

./: .gitignore  README.md  requirements.txt
asyncio_corrutinas/: 01_corrutinas.py  02_corrutinas.py
clases/: clases_abstractas.ipynb  introduccion.ipynb  monkey_patching.ipynb
clases/.ipynb_checkpoints/: clases_abstractas-checkpoint.ipynb  introduccion-checkpoint.ipynb
debugging/: debugging.py  program.prof
ejemplos_jupyter/: ejemplo_presentacion.ipynb  ejemplo_presentacion.slides.html  mi_script.py  opciones.ipynb
ejemplos_numpy/: introduccion.ipynb
ejemplos_numpy/.ipynb_checkpoints/: introduccion-checkpoint.ipynb
ejemplos_pandas/: introduccion.ipynb
ejemplos_pandas/.ipynb_checkpoints/: introduccion-checkpoint.ipynb
entornos_virtuales/: requirements.txt
entornos_virtuales/poetry_proj/: pyproject.toml
futuros/: 01_ejemplo_thread.py  02_ejemplo_thread.py  03_ejemplo_thread.py  04_futuros.py  05_futuros.py
generadores/: generadores.ipynb
list_comprehensions/: introduccion.ipynb
list_comprehensions/.ipynb_checkpoints/: introduccion-checkpoint.ipynb
paquetes_python/: setup.ipynb
patrones/: .pylintrc  patrones_adapter.py  patrones_memoize.py  patrones_singleton.py
python_a_fondo/: bytecode.ipynb  diccionarios.ipynb  listas.ipynb  performance.ipynb  sets.ipynb  tuplas.ipynb  valor_referencia.ipynb
testing/: 01_testing.py  02_testing.py  03_01_testing_unittests.py  03_02_testing_pytest.py  03_03_testing_pytest.py  04_solid_s.py  05_solid_o.py  06_solid_l.py  07_solid_i.py  08_solid_d.py
(+1 files in other folders)
