[tool.poetry]
name = "poetry_proj"
version = "0.1.0"
description = ""
authors = ["avara1986 <a.vara.1986@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
